Use the Text Blocks feature of java 15